# rsnap

./: .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  Makefile.toml  README.md  SPEC.md
.github/: dependabot.yml
.github/workflows/: language.yml  release.yml
apps/rsnap/: Cargo.toml  README.md  build.rs
apps/rsnap/assets/app-icon/composer/AppIcon.icon/: icon.json
apps/rsnap/benches/: settings_window.rs
apps/rsnap/src/: app.rs  icon.rs  lib.rs  main.rs  settings.rs  settings_window.rs  startup.rs
apps/rsnap/src/app/: capture.rs  hotkeys.rs  runtime.rs  scroll_input_macos.rs  shell.rs
apps/rsnap/src/app/scroll_input_macos/: decode.rs  state.rs  tap.rs
apps/rsnap/src/settings_window/: bench_support.rs  chrome.rs  hotkey.rs  platform.rs  render.rs  sections.rs
crates/rsnap-overlay/: Cargo.toml
crates/rsnap-overlay-protocol/: Cargo.toml
crates/rsnap-overlay-protocol/src/: lib.rs
crates/rsnap-overlay/src/: main.rs
docs/guide/: live-sampling-streams.md  performance-checks.md  scroll-capture-benchmarks.md  window-hit-testing.md
docs/plans/: 2026-02-22-pre-commit-report-editor-mvp.md  2026-02-22-pre-commit-report-editor-style.md  2026-02-22-pre-commit-report-scaffold.md  2026-02-22-pre-commit-report-style.md  2026-02-22-pre-commit-report.md  2026-02-22-rsnap-design.md  2026-02-22-rsnap-editor-mvp-implementation-plan.md  2026-02-22-rsnap-implementation-plan.md  2026-02-23-linux-security-followups.md  2026-02-23-rsnap-native-overlay-sidecar-design.md  2026-02-23-rsnap-native-overlay-sidecar-implementation-plan.md  2026-02-24_overlay_macos_border_design.md  2026-02-24_overlay_macos_border_implementation_plan.md  2026-02-24_overlay_rendering_followups_issue.md  2026-02-25-faux-glass-hud-design.md  2026-02-25-faux-glass-hud-implementation-plan.md  2026-02-26-settings-egui-geek-design.md  2026-03-11_xy-76-architecture-refactor.md  2026-03-12_settings-window-section-extraction.md  2026-03-15_xy-108-performance-budgets-and-benchmark-scenarios.md  2026-03-15_xy-109-settings-ui-benchmarks.md  2026-03-15_xy-110-overlay-phase-timing.md  2026-03-15_xy-111-scroll-capture-benchmarks.md  2026-03-15_xy-112-performance-entrypoints-and-runbook.md  2026-03-15_xy-115-overlay-repaint-cadence-alignment.md
docs/research/: live-sampling-streams.md  window-hit-testing.md
docs/spec/: index.md  performance_tracking.md  system_rsnap_current.md  system_rsnap_v1.md  v0.md
scripts/: bundle-macos.sh  live-loupe-perf-smoke-macos.sh  long-capture-smoke-macos.sh  package-macos-app.sh  scroll-capture-smoke-macos.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: capture.rs  commands.rs  export.rs  main.rs  settings.rs  tray.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json
ui/src/: api.ts  editor.ts  main.ts  settings.ts  style.css
