[workspace]
members  = ["apps/*", "packages/*"]
resolver = "3"

[workspace.package]
authors     = ["Xavier Lau <x@acg.box>"]
description = "Xnip-style screenshot utility scaffolding (Rust-only workspace)"
edition     = "2024"
homepage    = "https://hack.ink/rsnap"
license     = "GPL-3.0"
readme      = "README.md"
repository  = "https://github.com/hack-ink/rsnap"
version     = "0.1.0"

[workspace.dependencies]
arboard            = { version = "3.6.1" }
color-eyre         = { version = "0.6.5" }
device_query       = { version = "2.1.0" }
egui               = { version = "0.31.1" }
egui-wgpu          = { version = "0.31.1" }
egui-winit         = { version = "0.31.1" }
global-hotkey      = { version = "0.7.0", features = ["tracing"] }
image              = { version = "0.25.9", default-features = false, features = ["png"] }
objc               = { version = "0.2.7" }
pollster           = { version = "0.4.0" }
thiserror          = { version = "1.0.57" }
tracing            = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tray-icon          = { version = "0.21.3" }
wgpu               = { version = "24.0.1" }
winit              = { version = "0.30.12" }
xcap               = { version = "0.0.12" }

rsnap-overlay = { version = "0.1.0", path = "packages/rsnap-overlay" }

[profile.final-release]
inherits = "release"
lto      = true
