[workspace]
members  = ["apps/*", "packages/*"]
resolver = "3"

[workspace.package]
authors     = ["Xavier Lau <x@acg.box>"]
description = "Xnip-style screenshot utility scaffolding (Rust-only workspace)"
edition     = "2024"
homepage    = "https://hack.ink/rsnap"
license     = "GPL-3.0"
readme      = "README.md"
repository  = "https://github.com/hack-ink/rsnap"
version     = "0.1.0"

[workspace.dependencies]
arboard            = { version = "3.6" }
color-eyre         = { version = "0.6" }
device_query       = { version = "4.0" }
directories        = { version = "6.0" }
egui               = { version = "0.33" }
egui-phosphor      = { version = "0.11" }
egui-wgpu          = { version = "0.33" }
egui-winit         = { version = "0.33" }
global-hotkey      = { version = "0.7", features = ["tracing"] }
image              = { version = "0.25", default-features = false, features = ["png"] }
objc               = { version = "0.2" }
pollster           = { version = "0.4" }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = { version = "1.0" }
thiserror          = { version = "2.0" }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon          = { version = "0.21" }
wgpu               = { version = "27.0" }
winit              = { version = "0.30", features = ["rwh_06"] }
xcap               = { version = "0.8" }

rsnap-overlay = { version = "0.1.0", path = "packages/rsnap-overlay" }

raw-window-handle = { version = "0.6" }

[profile.final-release]
inherits = "release"
lto      = true
