[package]
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
license.workspace     = true
name                  = "rsnap"
readme.workspace      = true
repository.workspace  = true
version.workspace     = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
tauri                        = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
xcap                         = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
