[package]
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
license.workspace     = true
name                  = "rsnap"
readme.workspace      = true
repository.workspace  = true
version.workspace     = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
arboard                      = "3"
base64                       = "0.22"
dirs                         = "6"
image                        = "0.25"
tauri                        = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
xcap                         = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
