[package]
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
license.workspace     = true
name                  = "rsnap"
readme.workspace      = true
repository.workspace  = true
version.workspace     = true

[[bin]]
name = "rsnap"
path = "src/main.rs"

[dependencies]
color-eyre         = { workspace = true }
directories        = { workspace = true }
egui               = { workspace = true }
egui-wgpu          = { workspace = true }
egui-winit         = { workspace = true }
global-hotkey      = { workspace = true }
pollster           = { workspace = true }
rsnap-overlay      = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tray-icon          = { workspace = true }
wgpu               = { workspace = true }
winit              = { workspace = true }
