[package]
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
license.workspace     = true
name                  = "rsnap"
readme.workspace      = true
repository.workspace  = true
version.workspace     = true

[package.metadata.bundle]
icon       = ["apps/rsnap/assets/app-icon/generated/app-icon.icns", "assets/app-icon/generated/app-icon.icns"]
identifier = "ink.hack.rsnap"
name       = "Rsnap"

[[bin]]
name = "rsnap"
path = "src/main.rs"

[dependencies]
color-eyre         = { workspace = true }
directories        = { workspace = true }
egui               = { workspace = true }
egui-phosphor      = { workspace = true }
egui-wgpu          = { workspace = true }
egui-winit         = { workspace = true }
global-hotkey      = { workspace = true }
image              = { workspace = true }
pollster           = { workspace = true }
rsnap-overlay      = { workspace = true }
serde              = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-appender   = { workspace = true }
tracing-subscriber = { workspace = true }
tray-icon          = { workspace = true }
wgpu               = { workspace = true }
winit              = { workspace = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
harness = false
name    = "settings_window"
