[package]
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
license.workspace     = true
name                  = "rsnap-overlay"
readme.workspace      = true
repository.workspace  = true
version.workspace     = true

[package.metadata.docs.rs]
all-features = true

[features]
cargo-clippy = []

[dependencies]
color-eyre             = "0.6"
raw-window-handle      = "0.6"
rsnap-overlay-protocol = { path = "../rsnap-overlay-protocol" }
serde_json             = "1"
softbuffer             = "0.4"
winit                  = "0.30"
xcap                   = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }
